--- a/blog-react/src/components/CategoriasEDestaques/Card.css
+++ b/blog-react/src/components/CategoriasEDestaques/Card.css
@@ -1,4 +1,3 @@
-
 .post-card-grande {
   display: grid;
   grid-template-rows: 5fr 1fr 1fr;
@@ -23,5 +22,24 @@
   width: 100%;
   max-width: 38rem;
   height: 20rem;
+}
+
+
+
+@media (max-width: 992px) {
+  .cards {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 768px) {
+  .cards {
+    grid-template-columns: 1fr;
+  }
+  .maior {
+    width: 100%;
+    max-width: 42rem;
+    height: 20rem;
+  }
 }
 
